--- a/client/index.html
+++ b/client/index.html
@@ -4,5 +4,9 @@
     <title>Build an image processing server</title>
   </head>
   <body>
+    <form action="/upload", method="post", enctype="multipart/form-data">
+    <input type="file-input", type="file", name="photo">
+    <input type="submit", class="submit-button", value="Sumbit">
+    </form>
   </body>
 </html>
